# pytempo

./: .gitignore  LICENSE  README.md
.github/workflows/: publish_pypi.yml
pytempo/: pyproject.toml
pytempo/pytempo/: main.py
temboo/: .pre-commit-config.yaml  pyproject.toml
temboo/temboo/: main.py
